<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity2">

    <Button
        android:id="@+id/b3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="204dp"
        android:onClick="boton3"
        android:text="@string/boton_3"
        app:layout_constraintStart_toEndOf="@+id/b2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b6"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="boton6"
        android:text="@string/boton_6"
        app:layout_constraintStart_toEndOf="@+id/b5"
        app:layout_constraintTop_toBottomOf="@+id/b3" />

    <Button
        android:id="@+id/b5"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="boton5"
        android:text="@string/boton_5"
        app:layout_constraintStart_toEndOf="@+id/b4"
        app:layout_constraintTop_toBottomOf="@+id/b2" />

    <Button
        android:id="@+id/bRest"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:onClick="botonResta"
        android:text="@string/boton_Rest"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/b6"
        app:layout_constraintTop_toBottomOf="@+id/bSum" />

    <Button
        android:id="@+id/b1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="204dp"
        android:onClick="boton1"
        android:text="@string/boton_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bMulti"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:onClick="botonMultiplicacion"
        android:text="@string/boton_Mult"
        app:layout_constraintStart_toEndOf="@+id/b9"
        app:layout_constraintTop_toBottomOf="@+id/bRest" />

    <Button
        android:id="@+id/b2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="204dp"
        android:onClick="boton2"
        android:text="@string/boton_2"
        app:layout_constraintStart_toEndOf="@id/b1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bDivid"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:onClick="botonDivision"
        android:text="@string/boton_Div"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/bIgual"
        app:layout_constraintTop_toBottomOf="@+id/bMulti" />

    <Button
        android:id="@+id/b9"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="boton9"
        android:text="@string/boton_9"
        app:layout_constraintStart_toEndOf="@+id/b8"
        app:layout_constraintTop_toBottomOf="@+id/b6" />

    <Button
        android:id="@+id/b8"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="boton8"
        android:text="@string/boton_8"
        app:layout_constraintStart_toEndOf="@+id/b7"
        app:layout_constraintTop_toBottomOf="@+id/b5" />

    <Button
        android:id="@+id/bSum"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="204dp"
        android:onClick="botonSuma"
        android:text="@string/boton_Sum"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/b3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b7"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="boton7"
        android:text="@string/boton_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b4" />

    <Button
        android:id="@+id/bBorrar"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:onClick="botonResetear"
        android:text="@string/boton_Borrar"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b4" />

    <Button
        android:id="@+id/bIgual"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="188dp"
        android:onClick="botonIgual"
        android:text="@string/boton_Igual"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b9" />

    <Button
        android:id="@+id/b0"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="128dp"
        android:onClick="boton0"
        android:text="@string/boton_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b8" />

    <Button
        android:id="@+id/b4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="boton4"
        android:text="@string/boton_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="270dp"
        android:layout_height="62dp"
        android:layout_marginTop="100dp"
        android:textAlignment="textEnd"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Volver"
        android:layout_width="275dp"
        android:layout_height="48dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="176dp"
        android:onClick="volver"
        android:text="@string/boton_Volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>